# tariutxotest

./: Cargo.toml
inputambiguity/: Cargo.toml
inputambiguity/src/: lib.rs
linkingtag/: Cargo.toml
linkingtag/src/: lib.rs
package/: Cargo.toml
package/src/: lib.rs
tests/: Cargo.toml
